# INFOGRAFIE

src/: 00_tp1_intro.vcxproj  00_tp1_intro.vcxproj.filters  CMakeLists.txt  main.cpp  shader_program.cpp  shapes.cpp  vertices_data.h
src/shaders/: basic.fs.glsl  basic.vs.glsl  color.vs.glsl  transform.fs.glsl  transform.vs.glsl
